change build swarm network

--- a/google-cloud-network/docker-compose-cli-pc1.yaml
+++ b/google-cloud-network/docker-compose-cli-pc1.yaml
@@ -19,35 +19,7 @@ services:
   orderer_healthcare_com:
     image: hyperledger/fabric-orderer:$IMAGE_TAG
     hostname: orderer.healthcare.com
-    env_file: .orderer-env
-    # environment:
-    #   - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
-    #   - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=${COMPOSE_PROJECT_NAME}_health_network
-    #   - FABRIC_LOGGING_SPEC=INFO
-    #   - FABRIC_LOGGING_SPEC=DEBUG
-    #   - CORE_PEER_TLS_ENABLED=true
-    #   - CORE_PEER_GOSSIP_USELEADERELECTION=true
-    #   - CORE_PEER_GOSSIP_ORGLEADER=false
-    #   - CORE_PEER_PROFILE_ENABLED=true
-    #   - CORE_PEER_TLS_CERT_FILE=/etc/hyperledger/fabric/tls/server.crt
-    #   - CORE_PEER_TLS_KEY_FILE=/etc/hyperledger/fabric/tls/server.key
-    #   - CORE_PEER_TLS_ROOTCERT_FILE=/etc/hyperledger/fabric/tls/ca.crt\
-    #   - FABRIC_LOGGING_SPEC=INFO
-    #   - ORDERER_GENERAL_LISTENADDRESS=0.0.0.0
-    #   - ORDERER_GENERAL_GENESISMETHOD=file
-    #   - ORDERER_GENERAL_GENESISFILE=/var/hyperledger/orderer/orderer.genesis.block
-    #   - ORDERER_GENERAL_LOCALMSPID=OrdererMSP
-    #   - ORDERER_GENERAL_LOCALMSPDIR=/var/hyperledger/orderer/msp
-    #   # enabled TLS
-    #   - ORDERER_GENERAL_TLS_ENABLED=true
-    #   - ORDERER_GENERAL_TLS_PRIVATEKEY=/var/hyperledger/orderer/tls/server.key
-    #   - ORDERER_GENERAL_TLS_CERTIFICATE=/var/hyperledger/orderer/tls/server.crt
-    #   - ORDERER_GENERAL_TLS_ROOTCAS=[/var/hyperledger/orderer/tls/ca.crt]
-    #   - ORDERER_KAFKA_TOPIC_REPLICATIONFACTOR=1
-    #   - ORDERER_KAFKA_VERBOSE=true
-    #   - ORDERER_GENERAL_CLUSTER_CLIENTCERTIFICATE=/var/hyperledger/orderer/tls/server.crt
-    #   - ORDERER_GENERAL_CLUSTER_CLIENTPRIVATEKEY=/var/hyperledger/orderer/tls/server.key
-    #   - ORDERER_GENERAL_CLUSTER_ROOTCAS=[/var/hyperledger/orderer/tls/ca.crt]
+    env_file: env/.orderer-env
     working_dir: /opt/gopath/src/github.com/hyperledger/fabric
     command: orderer
     volumes:
@@ -69,30 +41,7 @@ services:
   peer0_hprovider_healthcare_com:
     image: hyperledger/fabric-peer:$IMAGE_TAG
     hostname: peer0.hprovider.healthcare.com
-    env_file: .peer1-hp-env
-    # environment:
-      # - CORE_PEER_ID=peer0_hprovider_healthcare_com
-      # - CORE_PEER_ADDRESS=peer0_hprovider_healthcare_com:7051
-      # - CORE_PEER_LISTENADDRESS=0.0.0.0:7051
-      # - CORE_PEER_CHAINCODEADDRESS=peer0_hprovider_healthcare_com:7052
-      # - CORE_PEER_CHAINCODELISTENADDRESS=0.0.0.0:7052
-      # - CORE_PEER_GOSSIP_BOOTSTRAP=peer1_hprovider_healthcare_com:8051
-      # - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer0_hprovider_healthcare_com:7051
-      # - CORE_PEER_LOCALMSPID=HProviderMSP
-      # - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
-      # # the following setting starts chaincode containers on the same
-      # # bridge network as the peers
-      # # https://docs.docker.com/compose/networking/
-      # - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=${COMPOSE_PROJECT_NAME}_health_network
-      # - FABRIC_LOGGING_SPEC=INFO
-      # - FABRIC_LOGGING_SPEC=DEBUG
-      # - CORE_PEER_TLS_ENABLED=true
-      # - CORE_PEER_GOSSIP_USELEADERELECTION=true
-      # - CORE_PEER_GOSSIP_ORGLEADER=false
-      # - CORE_PEER_PROFILE_ENABLED=true
-      # - CORE_PEER_TLS_CERT_FILE=/etc/hyperledger/fabric/tls/server.crt
-      # - CORE_PEER_TLS_KEY_FILE=/etc/hyperledger/fabric/tls/server.key
-      # - CORE_PEER_TLS_ROOTCERT_FILE=/etc/hyperledger/fabric/tls/ca.crt
+    env_file: env/.peer1-hp-env
     working_dir: /opt/gopath/src/github.com/hyperledger/fabric/peer
     command: peer node start
     volumes:
@@ -107,6 +56,7 @@ services:
         aliases:
           - peer0_hprovider_healthcare_com
     deploy:
+      replicas: 2
       placement:
         constraints: [node.role == worker]
     
@@ -117,21 +67,7 @@ services:
     image: hyperledger/fabric-tools:$IMAGE_TAG
     tty: true
     stdin_open: true
-    env_file: .cli-env
-    # environment:
-    #   - SYS_CHANNEL=$SYS_CHANNEL
-    #   - GOPATH=/opt/gopath
-    #   - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
-    #   #- FABRIC_LOGGING_SPEC=DEBUG
-    #   - FABRIC_LOGGING_SPEC=INFO
-    #   - CORE_PEER_ID=cli_pc1
-    #   - CORE_PEER_ADDRESS=peer0_hprovider_healthcare_com:7051
-    #   - CORE_PEER_LOCALMSPID=HProviderMSP
-    #   - CORE_PEER_TLS_ENABLED=true
-    #   - CORE_PEER_TLS_CERT_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/hprovider.healthcare.com/peers/peer0.hprovider.healthcare.com/tls/server.crt
-    #   - CORE_PEER_TLS_KEY_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/hprovider.healthcare.com/peers/peer0.hprovider.healthcare.com/tls/server.key
-    #   - CORE_PEER_TLS_ROOTCERT_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/hprovider.healthcare.com/peers/peer0.hprovider.healthcare.com/tls/ca.crt
-    #   - CORE_PEER_MSPCONFIGPATH=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/hprovider.healthcare.com/users/Admin@hprovider.healthcare.com/msp
+    env_file: env/.cli-env
     working_dir: /opt/gopath/src/github.com/hyperledger/fabric/peer
     command: /bin/bash
     volumes:
@@ -143,6 +79,10 @@ services:
     depends_on:
       - orderer_healthcare_com
       - peer0_hprovider_healthcare_com
+    deploy:
+      replicas: 5
+      placement:
+        constraints: [node.role == worker]
     networks:
       health_network:
         aliases:
