--- a/google-cloud-network/docker-compose-cli-pc4.yaml
+++ b/google-cloud-network/docker-compose-cli-pc4.yaml
@@ -3,64 +3,113 @@
 # SPDX-License-Identifier: Apache-2.0
 #
 
-version: '2'
+version: '3'
 
 volumes:
-  peer1.research.healthcare.com:
-  peer2.research.healthcare.com:
+  peer2_research_healthcare_com:
+  peer3_research_healthcare_com:
+  peer4_research_healthcare_com:
 
 networks:
   health_network:
     external:
       name: health_network
 
-services:
-  peer1.research.healthcare.com:
-    container_name: peer1.research.healthcare.com
-    extends:
-      file:  base/docker-compose-base.yaml
-      service: peer1.research.healthcare.com
-    networks:
-      - health_network
-
-#---------------------------------- New Peers -------------------------------
-  peer2.research.healthcare.com:
-    container_name: peer2.research.healthcare.com
-    extends:
-      file:  base/docker-compose-base.yaml
-      service: peer2.research.healthcare.com
-    networks:
-      - health_network
-
-  cli:
-    container_name: cli
-    image: hyperledger/fabric-tools:$IMAGE_TAG
-    tty: true
-    stdin_open: true
-    environment:
-      - SYS_CHANNEL=$SYS_CHANNEL
-      - GOPATH=/opt/gopath
-      - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
-      #- FABRIC_LOGGING_SPEC=DEBUG
-      - FABRIC_LOGGING_SPEC=INFO
-      - CORE_PEER_ID=cli
-      - CORE_PEER_ADDRESS=peer0.hprovider.healthcare.com:7051
-      - CORE_PEER_LOCALMSPID=HProviderMSP
-      - CORE_PEER_TLS_ENABLED=true
-      - CORE_PEER_TLS_CERT_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/hprovider.healthcare.com/peers/peer0.hprovider.healthcare.com/tls/server.crt
-      - CORE_PEER_TLS_KEY_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/hprovider.healthcare.com/peers/peer0.hprovider.healthcare.com/tls/server.key
-      - CORE_PEER_TLS_ROOTCERT_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/hprovider.healthcare.com/peers/peer0.hprovider.healthcare.com/tls/ca.crt
-      - CORE_PEER_MSPCONFIGPATH=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/hprovider.healthcare.com/users/Admin@hprovider.healthcare.com/msp
-    working_dir: /opt/gopath/src/github.com/hyperledger/fabric/peer
-    command: /bin/bash
+  peer2_research_healthcare_com:
+    image: hyperledger/fabric-peer:$IMAGE_TAG
+    container_name: peer2_research_healthcare_com
+    hostname: peer2_research_healthcare_com
+    env_file: .peer2-rs-env
     volumes:
         - /var/run/:/host/var/run/
-        - ./chaincode/:/opt/gopath/src/github.com/chaincode
-        - ./crypto-config:/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/
-        - ./scripts:/opt/gopath/src/github.com/hyperledger/fabric/peer/scripts/
-        - ./channel-artifacts:/opt/gopath/src/github.com/hyperledger/fabric/peer/channel-artifacts
-    depends_on:
-      - peer1.research.healthcare.com
-      - peer2.research.healthcare.com
+        - ../crypto-config/peerOrganizations/research.healthcare.com/peers/peer2.research.healthcare.com/msp:/etc/hyperledger/fabric/msp
+        - ../crypto-config/peerOrganizations/research.healthcare.com/peers/peer2.research.healthcare.com/tls:/etc/hyperledger/fabric/tls
+        - peer2.research.healthcare.com:/var/hyperledger/production
+    working_dir: /opt/gopath/src/github.com/hyperledger/fabric/peer
+    command: peer node start
+    ports:
+      - 15051:10051
     networks:
-      - health_network
+      health_network:
+        aliases:
+          - peer2_research_healthcare_com
+    deploy:
+      placement:
+        constraints: [node.role == worker]
+
+  peer3_hprovider_healthcare_com:
+    image: hyperledger/fabric-peer:$IMAGE_TAG
+    container_name: peer3_hprovider_healthcare_com
+    hostname: peer3_hprovider_healthcare_com
+    env_file: .peer3-rs-env
+    volumes:
+        - /var/run/:/host/var/run/
+        - ../crypto-config/peerOrganizations/research.healthcare.com/peers/peer3.research.healthcare.com/msp:/etc/hyperledger/fabric/msp
+        - ../crypto-config/peerOrganizations/research.healthcare.com/peers/peer3.research.healthcare.com/tls:/etc/hyperledger/fabric/tls
+        - peer3_research_healthcare_com:/var/hyperledger/production
+    ports:
+      - 15051:10051
+    working_dir: /opt/gopath/src/github.com/hyperledger/fabric/peer
+    command: peer node start
+    networks:
+      health_network:
+        aliases:
+          - peer3_research_healthcare_com
+    deploy:
+      placement:
+        constraints: [node.role == worker]
+
+  peer4_research_healthcare_com:
+    image: hyperledger/fabric-peer:$IMAGE_TAG
+    container_name: peer4_hprovider_healthcare_com
+    hostname: peer4_hprovider_healthcare_com
+    env_file: .peer4-rs-env
+    volumes:
+        - /var/run/:/host/var/run/
+        - ../crypto-config/peerOrganizations/research.healthcare.com/peers/peer4.research.healthcare.com/msp:/etc/hyperledger/fabric/msp
+        - ../crypto-config/peerOrganizations/research.healthcare.com/peers/peer4.research.healthcare.com/tls:/etc/hyperledger/fabric/tls
+        - peer4_research_healthcare_com:/var/hyperledger/production
+    ports:
+      - 16051:10051
+    working_dir: /opt/gopath/src/github.com/hyperledger/fabric/peer
+    command: peer node start
+    networks:
+      health_network:
+        aliases:
+          - peer4_research_healthcare_com
+    deploy:
+      placement:
+        constraints: [node.role == worker]
+
+  # cli:
+  #   container_name: cli
+  #   image: hyperledger/fabric-tools:$IMAGE_TAG
+  #   tty: true
+  #   stdin_open: true
+  #   environment:
+  #     - SYS_CHANNEL=$SYS_CHANNEL
+  #     - GOPATH=/opt/gopath
+  #     - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
+  #     #- FABRIC_LOGGING_SPEC=DEBUG
+  #     - FABRIC_LOGGING_SPEC=INFO
+  #     - CORE_PEER_ID=cli
+  #     - CORE_PEER_ADDRESS=peer0.hprovider.healthcare.com:7051
+  #     - CORE_PEER_LOCALMSPID=HProviderMSP
+  #     - CORE_PEER_TLS_ENABLED=true
+  #     - CORE_PEER_TLS_CERT_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/hprovider.healthcare.com/peers/peer0.hprovider.healthcare.com/tls/server.crt
+  #     - CORE_PEER_TLS_KEY_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/hprovider.healthcare.com/peers/peer0.hprovider.healthcare.com/tls/server.key
+  #     - CORE_PEER_TLS_ROOTCERT_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/hprovider.healthcare.com/peers/peer0.hprovider.healthcare.com/tls/ca.crt
+  #     - CORE_PEER_MSPCONFIGPATH=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/hprovider.healthcare.com/users/Admin@hprovider.healthcare.com/msp
+  #   working_dir: /opt/gopath/src/github.com/hyperledger/fabric/peer
+  #   command: /bin/bash
+  #   volumes:
+  #       - /var/run/:/host/var/run/
+  #       - ./chaincode/:/opt/gopath/src/github.com/chaincode
+  #       - ./crypto-config:/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/
+  #       - ./scripts:/opt/gopath/src/github.com/hyperledger/fabric/peer/scripts/
+  #       - ./channel-artifacts:/opt/gopath/src/github.com/hyperledger/fabric/peer/channel-artifacts
+  #   depends_on:
+  #     - peer1.research.healthcare.com
+  #     - peer2.research.healthcare.com
+  #   networks:
+  #     - health_network
