--- a/google-cloud-network/docker-compose-couch-pc2.yaml
+++ b/google-cloud-network/docker-compose-couch-pc2.yaml
@@ -31,20 +31,6 @@ services:
       placement:
         constraints: [node.role == worker]
 
-  # peer1_hprovider_healthcare_com:
-  #   environment:
-  #     - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
-  #     - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb1:5984
-  #     # The CORE_LEDGER_STATE_COUCHDBCONFIG_USERNAME and CORE_LEDGER_STATE_COUCHDBCONFIG_PASSWORD
-  #     # provide the credentials for ledger to connect to CouchDB.  The username and password must
-  #     # match the username and password set for the associated CouchDB.
-  #     - CORE_LEDGER_STATE_COUCHDBCONFIG_USERNAME=erikson  
-  #     - CORE_LEDGER_STATE_COUCHDBCONFIG_PASSWORD=wines
-  #   depends_on:
-  #     - couchdb1
-
-#---------------------------------- New Peers and couchdb -------------------------------
-
 
   couchdb4:
     container_name: couchdb4
@@ -65,18 +51,6 @@ services:
     deploy:
       placement:
         constraints: [node.role == worker]
-
-  # peer2_hprovider_healthcare_com:
-  #   environment:
-  #     - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
-  #     - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb4:5984
-  #     # The CORE_LEDGER_STATE_COUCHDBCONFIG_USERNAME and CORE_LEDGER_STATE_COUCHDBCONFIG_PASSWORD
-  #     # provide the credentials for ledger to connect to CouchDB.  The username and password must
-  #     # match the username and password set for the associated CouchDB.
-  #     - CORE_LEDGER_STATE_COUCHDBCONFIG_USERNAME=erikson
-  #     - CORE_LEDGER_STATE_COUCHDBCONFIG_PASSWORD=wines
-  #   depends_on:
-  #     - couchdb4
   
   couchdb5:
     container_name: couchdb5
@@ -98,17 +72,17 @@ services:
       placement:
         constraints: [node.role == worker]
 
-  # peer3_hprovider_healthcare_com:
-  #   environment:
-  #     - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
-  #     - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb5:5984
-  #     # The CORE_LEDGER_STATE_COUCHDBCONFIG_USERNAME and CORE_LEDGER_STATE_COUCHDBCONFIG_PASSWORD
-  #     # provide the credentials for ledger to connect to CouchDB.  The username and password must
-  #     # match the username and password set for the associated CouchDB.
-  #     - CORE_LEDGER_STATE_COUCHDBCONFIG_USERNAME=erikson
-  #     - CORE_LEDGER_STATE_COUCHDBCONFIG_PASSWORD=wines
-  #   depends_on:
-  #     - couchdb5
+  peer3_hprovider_healthcare_com:
+    environment:
+      - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb5:5984
+      # The CORE_LEDGER_STATE_COUCHDBCONFIG_USERNAME and CORE_LEDGER_STATE_COUCHDBCONFIG_PASSWORD
+      # provide the credentials for ledger to connect to CouchDB.  The username and password must
+      # match the username and password set for the associated CouchDB.
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_USERNAME=erikson
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_PASSWORD=wines
+    depends_on:
+      - couchdb5
   
   couchdb6:
     container_name: couchdb6
@@ -129,15 +103,3 @@ services:
     deploy:
       placement:
         constraints: [node.role == worker]
-
-  # peer4_hprovider_healthcare_com:
-  #   environment:
-  #     - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
-  #     - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb5:5984
-  #     # The CORE_LEDGER_STATE_COUCHDBCONFIG_USERNAME and CORE_LEDGER_STATE_COUCHDBCONFIG_PASSWORD
-  #     # provide the credentials for ledger to connect to CouchDB.  The username and password must
-  #     # match the username and password set for the associated CouchDB.
-  #     - CORE_LEDGER_STATE_COUCHDBCONFIG_USERNAME=erikson
-  #     - CORE_LEDGER_STATE_COUCHDBCONFIG_PASSWORD=wines
-  #   depends_on:
-  #     - couchdb6
