--- a/google-cloud-network/docker-compose-couch-pc3.yaml
+++ b/google-cloud-network/docker-compose-couch-pc3.yaml
@@ -3,27 +3,17 @@
 # SPDX-License-Identifier: Apache-2.0
 #
 
-version: '2'
+version: '3'
 
 networks:
   health_network:
+    external:
+      name: health_network
 
 services:
-  peer0.research.healthcare.com:
-    environment:
-      - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
-      - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb2:5984
-      # The CORE_LEDGER_STATE_COUCHDBCONFIG_USERNAME and CORE_LEDGER_STATE_COUCHDBCONFIG_PASSWORD
-      # provide the credentials for ledger to connect to CouchDB.  The username and password must
-      # match the username and password set for the associated CouchDB.
-      - CORE_LEDGER_STATE_COUCHDBCONFIG_USERNAME=erikson
-      - CORE_LEDGER_STATE_COUCHDBCONFIG_PASSWORD=wines
-    depends_on:
-      - couchdb2
-
   couchdb3:
     container_name: couchdb3
-    image: hyperledger/fabric-couchdb
+    image: hyperledger/fabric-couchdb:letast
     # Populate the COUCHDB_USER and COUCHDB_PASSWORD to set an admin user and password
     # for CouchDB.  This will prevent CouchDB from operating in an "Admin Party" mode.
     environment:
@@ -34,4 +24,29 @@ services:
     ports:
       - "8984:5984"
     networks:
-      - health_network
+      health_network:
+        aliases:
+          - couchdb3
+    deploy:
+      placement:
+        constraints: [node.role == manager]
+
+  couchdb5:
+    container_name: couchdb5
+    image: hyperledger/fabric-couchdb:letast
+    # Populate the COUCHDB_USER and COUCHDB_PASSWORD to set an admin user and password
+    # for CouchDB.  This will prevent CouchDB from operating in an "Admin Party" mode.
+    environment:
+      - COUCHDB_USER=erikson
+      - COUCHDB_PASSWORD=wines
+    # Comment/Uncomment the port mapping if you want to hide/expose the CouchDB service,
+    # for healthcare map it to utilize Fauxton User Interface in dev environments.
+    ports:
+      - "8984:5984"
+    networks:
+      health_network:
+        aliases:
+          - couchdb5
+    deploy:
+      placement:
+        constraints: [node.role == manager]
