--- a/google-cloud-network/docker-compose-couch-pc1.yaml
+++ b/google-cloud-network/docker-compose-couch-pc1.yaml
@@ -29,5 +29,6 @@ services:
         aliases:
           - couchdb0
     deploy:
+      mode: replicated
       placement:
         constraints: [node.role == manager]
