--- a/google-cloud-network/docker-compose-couch-pc2.yaml
+++ b/google-cloud-network/docker-compose-couch-pc2.yaml
@@ -90,5 +90,6 @@ services:
         aliases:
           - couchdb6
     deploy:
+      mode: replicated
       placement:
         constraints: [node.role == worker]
