--- a/google-cloud-network/docker-compose-ca-pc1.yaml
+++ b/google-cloud-network/docker-compose-ca-pc1.yaml
@@ -28,6 +28,7 @@ services:
     volumes:
       - ./crypto-config/peerOrganizations/hprovider.healthcare.com/ca/:/etc/hyperledger/fabric-ca-server-config
     deploy:
+      mode: replicated
       placement:
         constraints: [node.role == manager]
     networks:
