--- a/google-cloud-network/docker-compose-ca-pc2.yaml
+++ b/google-cloud-network/docker-compose-ca-pc2.yaml
@@ -27,6 +27,7 @@ services:
       - ./crypto-config/peerOrganizations/research.healthcare.com/ca/:/etc/hyperledger/fabric-ca-server-config
     #hostname: ca.research.healthcare.com
     deploy:
+      mode: replicated
       placement:
         constraints: [node.role == worker]
     networks:
