--- a/google-cloud-network/docker-compose-couch-pc3.yaml
+++ b/google-cloud-network/docker-compose-couch-pc3.yaml
@@ -48,5 +48,6 @@ services:
         aliases:
           - couchdb5
     deploy:
+      mode: replicated
       placement:
         constraints: [node.role == manager]
