--- a/google-cloud-network/docker-compose-couch-pc4.yaml
+++ b/google-cloud-network/docker-compose-couch-pc4.yaml
@@ -25,7 +25,13 @@ services:
     ports:
       - "12984:5984"
     networks:
-      - health_network
+      health_network:
+        aliases:
+          - couchdb7
+    deploy:
+      mode: replicated
+      placement:
+        constraints: [node.role == worker]
   
   couchdb8:
     container_name: couchdb8
@@ -40,7 +46,13 @@ services:
     ports:
       - "13984:5984"
     networks:
-      - health_network
+      health_network:
+        aliases:
+          - couchdb8
+    deploy:
+      mode: replicated
+      placement:
+        constraints: [node.role == worker]
 
   couchdb9:
     container_name: couchdb9
@@ -55,4 +67,10 @@ services:
     ports:
       - "14984:5984"
     networks:
-      - health_network
+      health_network:
+        aliases:
+          - couchdb9
+    deploy:
+      mode: replicated
+      placement:
+        constraints: [node.role == worker]
